hphp/test/slow/finally/try_finally_009.php.expectf
Fatal error: `continue;` is not allowed as a top-level statement in a `finally` block in %s/try_finally_009.php on line 11
